added extra info in forecast

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,7 +9,7 @@
     <body>
         <div class="main-content">
              {{>header}}
-             <p>This site  is about {{aboutText}}. Created by Geetha. It uses a data from Mapbox.com and Darksky.com This app will wont work since darksky.com doesnot allow you to get API.</p>
+             <p>This site  is about {{aboutText}}. Created by Geetha. It uses a data from Mapbox.com and Darksky.com This app will not work since darksky.com doesnot allow you to get API.</p>
              <img class="portrait"  src ="/img/download.jfif">
          </div>
        
